# Next

# 6.0.3

- Adds little confirmation popup when adding items to the queue
- Fixes queue item removal and reordering
- Some more Qt 6 transition 

# 6.0.2

- Adds background highlight to currently playing queue-item
- Changes "Select All" shortcut to "A"
- Fixes word wrapping for long titles
- Fixes song context menu target not spanning whole row
- Removes undesired, automatic mnemonics from nav and volume buttons

# 6.0.1

- Fixes version string in metadata

# 6.0.0

Python 3 (3.6+) is required now. Mpc was dropped as a requirement. Make sure python3 is available on your system!

- Update for plasma 6
- Changes backend from mpc to python-mpd2 (requires python 3.6+)
- Adds "Don't make me scroll over the same library over and over" shuffle button
- Fixes Ctrl+F not reliably jumping to search
- Cleans up and changes some keyboard shortcuts
- Queue's "Follow Mode" tries to be automagic(tm) and the mode-button was removed from the UI 
- "L" shortcut always shows the currently playing song in the Queue (and activates Follow Mode again)
- Provides more keyboard-shortcut hints in the UI
- Changes search to filter for the actual hits instead of the albumartist-list only

# 5.6.0

- Adds page-up/down key functionality in list views
- Fixes scrollwheel volume change not reaching min or max value
- Fixes low volume showing wrong volume icon
- Fixes to prevent volume slider jankiness
- Fixes widget layout sometimes resetting its size

# 5.5.1

- Fixes widget locking-up while loading covers from songs with no albumartist

# 5.5

- Fixes widget layout jumping around between empty queue and playing 
- Widget will no longer adjust its size to show full info text
- Minor UI tweaks

# 5.4

- Sorts internally instead of relying of the filesystem sorting
- Fixes volume slider jankiness
- Only set the "host" config on mpc commands if it one is provided in the config
- Reorganized widget configuration sections

# 5.3

- Increases cursor visibility on currently paying item