@@ -1,5 +1,7 @@
 # Next
 
+- Adds some confirmation popups on Artists and Playlists page 
+
 # 6.0.3
 
 - Adds little confirmation popup when adding items to the queue
